# Portfolio-Optimization-Insights

./: .dockerignore  .env.example  .env.prod.local.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_public_backend.py  0002_manual_accounting.py  0003_option_chain_snapshots.py
app/: __init__.py  main.py  security.py
app/api/: __init__.py  health.py  routes.py  schemas.py  services.py
app/auth/: limiting.py  security.py
app/background/: __init__.py  portfolio_tasks.py  queue.py  worker.py
app/connectors/: __init__.py  broker_csv.py  brokers.py  email.py
app/db/: __init__.py  encryption.py  models.py  repository.py  schema.sql  session.py
app/ops/: __init__.py  healthcheck.py  smtp_check.py
app/quant/: __init__.py  bonds.py  heatmap.py  options_suite.py  portfolio.py  (+4 more)
docs/: HOSTINGER_VPS_DEPLOYMENT.md  PUBLIC_DEPLOYMENT.md  TAB_TEMPLATE.md
frontend/: app.js  demo-data.js  index.html  styles.css  theme-init.js
scripts/: prod_backup.sh  prod_preflight.sh  prod_restore.sh  prod_smoke_test.py
tests/: conftest.py  test_auth.py  test_background_worker.py  test_bonds.py  test_broker_csv.py  test_frontend.py  test_health.py  test_heatmap.py  test_historical_analytics.py  test_manual_portfolios.py  test_market_data.py  test_ops.py  test_portfolios.py  test_public_readiness.py  test_quant_routes.py  test_relativistic_black_scholes.py  test_risk_bond_routes.py  test_risk_profiles.py  test_rmt.py  test_trade_impact.py
(+13 files in other folders)
