[project]
name = "portfolio-optimization-api"
version = "0.1.0"
description = "FastAPI backend for portfolio creation, analysis, optimization, and trade-impact simulation."
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
